5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1734_2502.log
== TEST (2019-05-14 19:37:35) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia=pia*(sinal*1/(i*((i+2)**c))
	c= c+ 1
	i = i + 2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c= c+ 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:38:30) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia=pia*(sinal/(i*((i+2)**c))
	c= c + 1
	i = i + 2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c= c + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:38:43) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia=pia*(sinal/(i*((i+2)**c))
	c= c + 1
	i = i + 2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c= c + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:39:05) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia=pia*(sinal/(i*((i+2)**c))
	i = i + 2
	c= c+ 1
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    i = i + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:39:19) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia=pia*(sinal/(i*((i+2)**c))
	i = i + 2
	c= c+ 1
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    i = i + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:41:31) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia* (sinal/(i*((i+2)**c)
	c=c+1
	i=i+2
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:41:53) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia* (sinal/(i*((i+2)**c)
	c=c+1
	i=i+2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:42:12) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia* (sinal/(i*((i+2)**c)
	c=c+1
	i=i+2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:42:39) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia* (sinal/(i*((i+2)**c)
	c=c+1
	i=i+2
print(round(pia, 8))
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:43:32) 
-- CODE:
n=float(input("numero n: "))
pia=12**1/2
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:44:01) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:44:06) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:44:58) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:45:02) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- EXECUTION TIME:
0.154921
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
-0.0
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
-0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:45:52) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
while (c<n):
	sinal= (-1)**c
	pia= pia  * (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
print(round(pia, 8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:46:58) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
soma= 0
while (c<n):
	sinal= (-1)**c
	soma=  (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
pia= pia* soma
print(round(pia, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:47:04) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
soma= 0
while (c<n):
	sinal= (-1)**c
	soma=  (sinal/(i*((i+2)**c)))
	c=c+1
	i=i+2
pia= pia* soma
print(round(pia, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:47:30) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
soma= 0
while (c<n):
	sinal= (-1)**c
	soma=  (sinal* (1)/(i*((i+2)**c)))
	c=c+1
	i=i+2
pia= pia* soma
print(round(pia, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:47:33) 
-- CODE:
n=float(input("numero n: "))
pia=12**(1/2)
c=0
i=1
soma= 0
while (c<n):
	sinal= (-1)**c
	soma=  (sinal* (1)/(i*((i+2)**c)))
	c=c+1
	i=i+2
pia= pia* soma
print(round(pia, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:55:31) 
-- CODE:
n=float(input("numero n: "))
pia=sqrt(12)
c=0
i=1
soma= 0
if (n==1):
	print(sqrt(12))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
pia= pia* soma
print(round(pia, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pia=sqrt(12)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:56:41) 
-- CODE:
n=float(input("numero n: "))
pia=sqrt(12)
c=0
i=1
soma= 0
if (n==1):
	print(sqrt(12))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
pia= pia* soma
print(round(pia, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pia=sqrt(12)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:57:33) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(12**(1/2))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
pia= pia* soma
print(round(pia, 8))
-- OUTPUT:
5.62335812
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:57:42) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(12**(1/2))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.62335812
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:58:09) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(round(12**(1/2), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.62335812
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:58:16) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(round(12**(1/2), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*((i+2)**c)))
		c=c+1
		i=i+2
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.62335812
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:59:40) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(round(12**(1/2), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* (1)/(i*(3**c)))
		c=c+1
		i=i+2
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.44139922
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:00:57) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
soma= 0
if (n==1):
	print(round(12**(1/2), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* ((1)/(i*(3**c))))
		c=c+1
		i=i+2
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.44139922
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:01:51) 
-- CODE:
n=float(input("numero n: "))
pia=12*(1/2)
c=0
i=1
d=0
soma= 0
if (n==1):
	print(round(12**(1/2), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* ((1)/(i*(3**d))))
		c=c+1
		i=i+2
		d=d+1
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
5.44139922
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:02:30) 
-- CODE:
from math import*
n=float(input("numero n: "))
pia=sqrt(12)
c=0
i=1
d=0
soma= 0
if (n==1):
	print(round(sqrt(12), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* ((1)/(i*(3**d))))
		c=c+1
		i=i+2
		d=d+1
	pia= pia* soma
	print(round(pia, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:02:37) 
-- CODE:
from math import*
n=float(input("numero n: "))
pia=sqrt(12)
c=0
i=1
d=0
soma= 0
if (n==1):
	print(round(sqrt(12), 8))
else:
	while (c<n):
		sinal= (-1)**c
		soma= soma+ (sinal* ((1)/(i*(3**d))))
		c=c+1
		i=i+2
		d=d+1
	pia= pia* soma
	print(round(pia, 8))
-- EXECUTION TIME:
0.161954
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
